--- a/projects/msvc/na_containers/na_containers/na_containers.vcxproj.filters
+++ b/projects/msvc/na_containers/na_containers/na_containers.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="..\..\..\..\include\na_containers\na_vector.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\na_containers\array2d.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
