--- a/projects/msvc/na_containers/na_containers/na_containers.vcxproj
+++ b/projects/msvc/na_containers/na_containers/na_containers.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="..\..\..\..\na_containers\na_vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\include\na_containers\array2d.h" />
     <ClInclude Include="..\..\..\..\include\na_containers\na_vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
