updated project files.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ na_containers/release
 *.opensdf
 lib/
 projects/msvc/na_containers/na_containers.v11.suo
+projects/msvc/na_containers/na_containers.v11.suo
