--- a/projects/msvc/na_containers/na_containers_test/na_containers_test.vcxproj
+++ b/projects/msvc/na_containers/na_containers_test/na_containers_test.vcxproj
@@ -62,6 +62,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <AssemblerOutput>AssemblyCode</AssemblerOutput>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
